# 7S-generator

./: README.md  TODO.md  pyproject.toml
corpusgen/: cli.py  content.py  corpus.py  feed.py  generate.py  imagebank.py  images.py  render.py
corpusgen/imagebank/: bank.json
tests/: test_corpusgen.py
tools/: build_bank.py
